--- a/task3/task3.css
+++ b/task3/task3.css
@@ -9,7 +9,6 @@ body {
 
 .header {
     padding: 10px 0px 0px 15px;
-    ;
     height: 76px;
 }
 
@@ -22,7 +21,6 @@ body {
     text-align: center;
 
     height: 96px;
-
 }
 
 .main-01 img {
@@ -35,60 +33,53 @@ body {
     font-size: 14px;
     letter-spacing: 1px;
     line-height: 27px;
-    padding: 0 14%;
+    padding: 0 50.5px;
     height: 189px;
-
-
 }
 
 .footer {
-    font-size: 10px;
-    padding: 0 21% 0 15%;
-
-
-
+    display: flex;
+    justify-content: space-between;
 }
 
-.footer-left { text-align: center;
+.footer-left {
+    height: 100px;
+    width: 100px;
+    margin-left: 43.5px;
+    text-align: center;
+}
 
-    
-    display: inline-block;
-
-
+.left1,
+.right1 {
+    font-size: 0;
 }
 
 .left1 img {
-    text-align: center;
-
     width: 42px;
     height: 42px;
-    margin-bottom:3px;
-
 }
 
 .left2 {
-    text-align: center;
+    font-size: 9.5px;
     color: white;
+    margin-top: 8px;
 }
 
-.footer-right { text-align: center;
-    color: white;
-    float: right;
-    display: inline-block;
-
-
+.footer-right {
+    height: 100px;
+    width: 100px;
+    margin-right: 43.5px;
+    text-align: center;
 }
 
 .right1 img {
-    text-align: center;
-    margin-bottom:3px;
     width: 42px;
     height: 42px;
 
 }
 
 .right2 {
-    text-align: center;
-
-
+    font-size: 9.5px;
+    color: white;
+    margin-top: 8px;
 }
