--- a/task4/task4.css
+++ b/task4/task4.css
@@ -12,7 +12,7 @@ html{font-size:62.5%;}
 }
 
 .head1 {
-    margin-left: 31px;
+    margin-left: 1.55rem;
     font-size: 1.45rem;
     color: white;
 }
